# Avi_99L_MissionBoard

./: README.md  flake.nix
control/: README.md
main/: sdkconfig.defaults
main/main/: main.c
mission_board/: Cargo.toml
mission_board/src/: board.rs  imu.rs  lib.rs
