[package]
edition = "2024"
name = "mission_board"
rust-version = "1.88"
version = "0.1.0"
default-run = "mission_board"
autobins = false

[[bin]]
name = "mission_board"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.1.0", features = ["esp32s3", "unstable"] }

esp-rtos = { version = "0.3.0", features = ["embassy", "esp32s3"] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }

embassy-executor = { version = "0.10.0", features = [] }
embassy-time = "0.5.1"
embassy-sync = "0.8.0"

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
icm426xx = { version = "0.4.0", features = ["async"] }

critical-section = "1.2.0"
static_cell = "2.1.1"

esp-backtrace = { version = "0.19.0", features = [
    "esp32s3",
    "panic-handler",
    "println",
    "custom-pre-backtrace",
    "custom-halt"
] }
esp-println = { version = "0.17.0", features = ["log-04", "esp32s3"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
